# solanaDAO

./: Anchor.toml  README.md  demo_pitch.md  package-lock.json
app/: package-lock.json  package.json
app/src/: idl.json
app/src/components/: Footer.jsx  Intro.jsx  Main.jsx  Navbar.jsx  VoteHistory.jsx  VoteTally.jsx
programs/solana-dao/: Cargo.toml
programs/solana-dao/src/: lib.rs
tests/: solana-dao.ts
